internal/api: Return 404 instead of 400 for unknown hosts
This was suggested by a fuzzing program and is indeed more REST-like.
