# api/docs/swagger.json
@@ -51,6 +51,12 @@
                             "$ref": "#/definitions/api.ApiResponseError"
                         }
                     },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "$ref": "#/definitions/api.ApiResponseError"
+                        }
+                    },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
@@ -114,6 +120,12 @@
                             "$ref": "#/definitions/api.ApiResponseError"
                         }
                     },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "$ref": "#/definitions/api.ApiResponseError"
+                        }
+                    },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
@@ -172,11 +184,11 @@
         "api.FormHostCertificate": {
             "type": "object",
             "required": [
-                "pubkey",
+                "publickey",
                 "token"
             ],
             "properties": {
-                "pubkey": {
+                "publickey": {
                     "type": "string"
                 },
                 "token": {
